# docs/api/api.yaml
@@ -25,6 +25,9 @@ paths:
       responses:
         '200':
           description: Success
+      security:
+        - api_key:
+            - twitter
       tags:
         - Twitter
   /v1/twitter/secrets:
@@ -48,6 +51,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StoreSecretResponse'
+      security:
+        - api_key:
+            - twitter
       tags:
         - Twitter
   '/v1/twitter/secrets/{id}':
@@ -65,9 +71,17 @@ paths:
       responses:
         '200':
           description: Success
+      security:
+        - api_key:
+            - twitter
       tags:
         - Twitter
 components:
+  securitySchemes:
+    api_key:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     StoreSecretRequest:
       type: object
