# src/main/kotlin/com/wutsi/twitter/endpoint/RevokeSecretController.kt
@@ -1,6 +1,7 @@
 package com.wutsi.twitter.endpoint
 
 import com.wutsi.twitter.`delegate`.RevokeSecretDelegate
+import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.DeleteMapping
 import org.springframework.web.bind.`annotation`.PathVariable
 import org.springframework.web.bind.`annotation`.RestController
@@ -11,6 +12,7 @@ public class RevokeSecretController(
     private val `delegate`: RevokeSecretDelegate
 ) {
     @DeleteMapping("/v1/twitter/secrets/{id}")
+    @PreAuthorize(value = "hasAuthority('twitter')")
     public fun invoke(@PathVariable(name = "id") id: Long) {
         delegate.invoke(id)
     }
