# src/main/kotlin/com/wutsi/twitter/endpoint/ShareController.kt
@@ -1,6 +1,7 @@
 package com.wutsi.twitter.endpoint
 
 import com.wutsi.twitter.`delegate`.ShareDelegate
+import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.GetMapping
 import org.springframework.web.bind.`annotation`.RequestParam
 import org.springframework.web.bind.`annotation`.RestController
@@ -11,6 +12,7 @@ public class ShareController(
     private val `delegate`: ShareDelegate
 ) {
     @GetMapping("/v1/twitter/share")
+    @PreAuthorize(value = "hasAuthority('twitter')")
     public fun invoke(@RequestParam(name = "story-id", required = false) storyId: Long) {
         delegate.invoke(storyId)
     }
